fixed a couple layout issues

--- a/avocado/contrib/client/static/css/design.css
+++ b/avocado/contrib/client/static/css/design.css
@@ -32,6 +32,10 @@
 /*
  * Panels - components within the panes
  */
+ 
+#search-panel {
+    height: 42px;
+}
 
 #search-panel form {
     background-color: #D5E2F2;
@@ -40,6 +44,7 @@
 }
 
 #categories {
+    bottom: 0;
     padding: 13px 0;
     text-shadow: #fff 1px 1px 0; 
     background-color: #eee;
@@ -47,8 +52,9 @@
 
 #categories > * {
     padding: 13px 10px;
-    border-right: 1px solid #ccc;
+    border-right: 1px solid #ccc;    
     -webkit-box-shadow: inset 0 -3px 8px #ddd;
+    -moz-box-shadow: inset 0 -3px 8px #ddd;    
 }
 
 #categories > :last-child {
@@ -75,7 +81,6 @@
 
 #search {
     width: 200px;
-    font-size: 16px;
 }
 
 #criteria {
